--- a/package.json
+++ b/package.json
@@ -11,11 +11,31 @@
 		"lint:fix": "eslint src/**/*.{js,jsx,ts,tsx} --fix"
 	},
 	"dependencies": {
+		"@emotion/react": "^11.11.4",
+		"@emotion/styled": "^11.11.0",
+		"@mui/icons-material": "^5.15.14",
+		"@mui/material": "^5.15.14",
+		"@mui/styled-engine-sc": "^6.0.0-alpha.18",
+		"@reduxjs/toolkit": "^2.2.2",
+		"axios": "^1.6.8",
+		"date-fns": "^3.6.0",
+		"leaflet": "^1.9.4",
 		"react": "^18.2.0",
-		"react-dom": "^18.2.0"
+		"react-beautiful-dnd": "^13.1.1",
+		"react-date-range": "^2.0.0-alpha.4",
+		"react-dom": "^18.2.0",
+		"react-dropzone": "^14.2.3",
+		"react-leaflet": "^4.2.1",
+		"react-redux": "^9.1.0",
+		"react-router-dom": "^6.22.3",
+		"styled-components": "^6.1.8",
+		"sweetalert": "^2.1.2",
+		"yup": "^1.4.0"
 	},
 	"devDependencies": {
+		"@types/leaflet": "^1.9.12",
 		"@types/react": "^18.0.28",
+		"@types/react-date-range": "^1.4.9",
 		"@types/react-dom": "^18.0.11",
 		"@typescript-eslint/eslint-plugin": "^5.58.0",
 		"@typescript-eslint/parser": "^5.58.0",
